# Sigma

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.jupyter  Dockerfile.worker  Final_slides.html  Final_slides_av.html  Final_story.md  README.md  Untitled.ipynb  debug_fixed.html  docker-compose.yaml  ex_slides.html  final_presentation.md  final_slides_inflation.html  final_story_inflation.md  inflation-interest-rate-and-unemployment_mini_presentation.md  inflation_interest_unemployment_analysis_v2.ipynb  main.py  mini_presentation_avip.md  presentation.md  pyproject.toml  test.md  test_jupyter.py
data/: Final_slides.html  Final_story.md  US_Economic_Analysis_mini_presentation.md  debug_embedded.html  inflation-interest-rate-and-unemployment_mini_presentation.md  mini_presentation_ssrn-5233576.md  presentation.md
data/analysis/: US_Economic_Analysis.ipynb
scripts/: manual_test_runner.py
src/: config.py
src/core/: agent.py  convert_html_pdf.py  convert_image_base64.py  new_agent_architecture.py  new_architecture_prompt.py  process_context.py  prompt.py  savetos3.py  tools.py  unusedagent.py
src/data_analyst/: __init__.py  data_analyst_agent.py  prompt.py  tools.py
src/database/: database.py
src/deep_researcher/: agents.py  research_agent.ipynb
src/document_processing/: content_hyderator.py  csv_to_md.py  document_processing.py  document_summary.py  document_understanding.py  example_usage.py  extract_multimodel.py  new_prompt.py  prompt.py  save_content.py  structure_vizualizor.py  test_the_agent.py  tools.py  vector_store.py
(+50 files in other folders)
