[project]
name = "beat-gamma-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.2.7",
    "google-genai>=1.52.0",
    "jupyter-mcp-server>=0.19.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langsmith>=0.4.46",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
