[project]
name = "beat-gamma-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.1",
    "deepagents>=0.2.7",
    "docling>=2.64.0",
    "google-genai>=1.52.0",
    "jupyter-collaboration>=4.1.2",
    "jupyter-mcp-server>=0.19.0",
    "jupyter-server-fileid>=0.9.3",
    "jupyter-server-ydoc>=2.1.2",
    "jupyterlab>=4.5.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.1.14",
    "langsmith>=0.4.46",
    "markdownify>=1.2.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "supabase>=2.24.0",
    "tabulate>=0.9.0",
]
